fix bug,support dark mode,drag todo by colorful handle

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -75,5 +75,14 @@
     @apply bg-background text-foreground;
     font-family: "Poppins";
   }
+}
 
+@layer utilities{
+  .no-scrollbar::-webkit-scrollbar {
+      display: none;
+  }
+  .no-scrollbar {
+      -ms-overflow-style: none; /* IE and Edge */
+      scrollbar-width: none; /* Firefox */
+    }
 }
